test release on master

--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ runs:
       id: extract_key
       shell: bash
       run: |
-        BRANCH_NAME= ${{ inputs.branch-name }}
+        BRANCH_NAME= "${{ inputs.branch-name }}"
         # Check if the branch name starts with a standard prefix and contains a Jira key (e.g., feature/ABC-123-description)
         if [[ "$BRANCH_NAME" =~ (feat|hotfix|bugfix)/([A-Z]+-[0-9]+) ]]; then
           ISSUE_KEY="${BASH_REMATCH[2]}"
