--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 🔍 Jira Issue Check
+name: 'Jira Issue Check'
 inputs:
   branch-name:  # New input for the branch name
     description: 'The branch name passed from the calling workflow.'
@@ -21,7 +21,7 @@ runs:
       run: |
         BRANCH_NAME= "${{ inputs.branch-name }}"
         # Check if the branch name starts with a standard prefix and contains a Jira key (e.g., feature/ABC-123-description)
-        if [[ "$BRANCH_NAME" =~ (feat|hotfix|bugfix)/([A-Z]+-[0-9]+) ]]; then
+        if [[ "${BRANCH_NAME}" =~ (feat|hotfix|bugfix)/([A-Z]+-[0-9]+) ]]; then
           ISSUE_KEY="${BASH_REMATCH[2]}"
           echo "Extracted Jira Issue Key: $ISSUE_KEY"
           echo "issue_key=$ISSUE_KEY" >> $GITHUB_OUTPUT
