--- a/action.yml
+++ b/action.yml
@@ -39,9 +39,9 @@ runs:
         JIRA_AUTH="$INPUT_JIRA_TOKEN"
         ISSUE_KEY="${{ steps.extract_key.outputs.issue_key }}"
         HTTP_STATUS=$(curl -s -o /tmp/jira_response.json -w "%{http_code}" \
-        --location --request GET "${{ env.JIRA_URL }}/rest/api/2/issue/$ISSUE_KEY?fields=status" \
+        --location --request GET "${{ JIRA_URL }}/rest/api/2/issue/$ISSUE_KEY?fields=status" \
         --header 'Accept: application/json' \
-        --header "Authorization: Bearer ${{ env.JIRA_AUTH }}" )
+        --header "Authorization: Bearer ${{ JIRA_AUTH }}" )
         
         echo "Jira API HTTP Status: $HTTP_STATUS"
 
