--- a/action.yml
+++ b/action.yml
@@ -35,7 +35,7 @@ runs:
       id: get_status
       shell: bash
       run: |
-        echo "$JIRA_URL"
+        echo "$jira-base-url"
         # JIRA_URL="${jira-base-url}"
         # JIRA_AUTH="${jira-token}"
         ISSUE_KEY="${{ steps.extract_key.outputs.issue_key }}"
