--- a/action.yml
+++ b/action.yml
@@ -79,7 +79,7 @@ runs:
       run: |
         ALL_STATUS="${{ steps.get_status.outputs.all_status }}"
         echo "All statuses: $ALL_STATUS"
-
+        FAIL=false
         IFS=',' read -ra ITEMS <<< "$ALL_STATUS"
 
         for ITEM in "${ITEMS[@]}"; do
@@ -92,9 +92,13 @@ runs:
           # fi
           if [[ "$STATUS" != "Done" ]]; then
               echo "❌ Issue $ISSUE_KEY is '$STATUS'. Must be 'Done'."
-              exit 1
+              fail=true
           fi
           echo "✔ $ISSUE_KEY is $STATUS"
         done
-
-        echo "🎉 All Jira issues are in allowed statuses!"
+        if [ "$FAIL" = true ]; then
+          echo "❌ One or more Jira issues are not 'Done'."
+          exit 1
+        else
+          echo "🎉 All Jira issues are in allowed statuses!"
+        fi
