--- a/action.yml
+++ b/action.yml
@@ -91,7 +91,7 @@ runs:
       if: always()
       uses: peter-evans/create-or-update-comment@v5
       with:
-        # issue-number: ${{ github.event.pull_request.number }}
+        issue-number: ${{ github.event.pull_request.number }}
         body: |
           ## Jira Issue Statuses
           $ALL_STATUS  # Or format nicely in your loop
