--- a/action.yml
+++ b/action.yml
@@ -77,13 +77,11 @@ runs:
         done
         # Export summary to next step
         # Escape newlines for GitHub output
-        # SUMMARY_ESCAPED=$(printf "%s" "$SUMMARY" | sed ':a;N;$!ba;s/\n/%0A/g')
-        # echo "summary=$SUMMARY_ESCAPED" >> $GITHUB_OUTPUT
-        {
-          echo "summary<<EOF"
-          echo "$SUMMARY"
-          echo "EOF"
-        } >> "$GITHUB_OUTPUT"
+        SUMMARY_ESCAPED=$(printf "%s" "$SUMMARY" | sed ':a;N;$!ba;s/\n/%0A/g')
+        echo "summary=$SUMMARY_ESCAPED" >> $GITHUB_OUTPUT
+        echo "--- DEBUG: ESCAPED SUMMARY ---"
+        echo "$SUMMARY_ESCAPED"
+        echo "------------------------------"
       
         if [ "$FAIL" = true ]; then
           echo "❌ One or more Jira issues are not 'Done'."
