--- a/action.yml
+++ b/action.yml
@@ -77,7 +77,7 @@ runs:
         done
         # Export summary to next step
         # Escape newlines for GitHub output
-        SUMMARY_ESCAPED=$(echo "$SUMMARY" | sed ':a;N;$!ba;s/\n/%0A/g')
+        SUMMARY_ESCAPED=$(printf "%s" "$SUMMARY" | sed ':a;N;$!ba;s/\n/%0A/g')
         echo "summary=$SUMMARY_ESCAPED" >> $GITHUB_OUTPUT
         echo "--- DEBUG: ESCAPED SUMMARY ---"
         echo "$SUMMARY_ESCAPED"
