--- a/action.yml
+++ b/action.yml
@@ -55,7 +55,7 @@ runs:
           JIRA_AUTH="${{ inputs.jira-token }}"
       
           HTTP_STATUS=$(curl -s -o /tmp/jira_response.json -w "%{http_code}" \
-            --location --request GET "${JIRA_URL}/rest/api/2/issue/$ISSUE_KEY?fields=status" \
+            --location --request GET "${JIRA_URL}/rest/api/2/issue/$ISSUE_KEY?fields=status,summary" \
             --header 'Accept: application/json' \
             --header "Authorization: Bearer $JIRA_AUTH" )
       
