--- a/action.yml
+++ b/action.yml
@@ -68,7 +68,9 @@ runs:
           fi
           if [[ "$STATUS" == "Done" ]]; then
             ICON="✅"
+            echo "1111111"
           else
+            echo "22222222"
             ICON="❌"
             FAIL=true
           fi
