--- a/action.yml
+++ b/action.yml
@@ -66,12 +66,12 @@ runs:
             FAIL=true
             continue
           fi
-          # if [[ "$STATUS" == "Done" ]]; then
-          #   ICON="✅"=
-          # else
-          #   ICON="❌"
-          #   FAIL=true
-          # fi
+          if [[ "$STATUS" != "Done" ]]; then
+            ICON="❌"
+            FAIL=true
+          else
+            ICON="✅"
+          fi
           STATUS=$(jq -r '.fields.status.name' /tmp/jira_response.json)
           TITLE=$(jq -r '.fields.summary' /tmp/jira_response.json)
           SUMMARY+="- **$ISSUE_KEY** → $STATUS\n"
