--- a/action.yml
+++ b/action.yml
@@ -66,14 +66,14 @@ runs:
             FAIL=true
             continue
           fi
-          if [[ "$STATUS" != "Done" ]]; then
-            ICON="❌"
-            FAIL=true
-          else
-            ICON="✅"
-          fi
           STATUS=$(jq -r '.fields.status.name' /tmp/jira_response.json)
           TITLE=$(jq -r '.fields.summary' /tmp/jira_response.json)
+          if [[ "$STATUS" == "Done" ]]; then
+            ICON="✅"
+          else
+            ICON="❌"
+            FAIL=true
+          fi
           SUMMARY+="- **$ISSUE_KEY** → $STATUS\n"
           echo "✔ $ISSUE_KEY Status: $STATUS"
           # echo "- **$ISSUE_KEY** → $STATUS" >> "$OUTPUT_FILE"
